.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:01:01 **** Incremental Build of configuration Debug for project Lab03_UART_SPI ****
make all 
Building file: ../src/Lab03_uart.c
Invoking: MCU GCC Compiler
/Users/lucienbrule/Developer/otherMPS/MPS/Lab03_UART_SPI/Debug
arm-none-eabi-gcc -mcpu=cortex-m7 -mthumb -mfloat-abi=hard -mfpu=fpv5-d16 -DUSE_HAL_DRIVER -DSTM32F769xx -DUSE_STM32F769I_DISCO -I"/Users/lucienbrule/Developer/otherMPS/MPS/Lab03_UART_SPI/inc" -I"/Users/lucienbrule/Developer/otherMPS/MPS/stm32lib/Drivers/CMSIS/Device/ST/STM32F7xx/Include" -I"/Users/lucienbrule/Developer/otherMPS/MPS/stm32lib/Drivers/CMSIS/Include" -I"/Users/lucienbrule/Developer/otherMPS/MPS/stm32lib/Drivers/STM32F7xx_HAL_Driver/Inc" -Og -g3 -Wall -fmessage-length=0 -Wdouble-promotion -ffunction-sections -c -MMD -MP -MF"src/Lab03_uart.d" -MT"src/Lab03_uart.o" -o "src/Lab03_uart.o" "../src/Lab03_uart.c"
../src/Lab03_uart.c: In function 'polling_receive':
../src/Lab03_uart.c:28:4: warning: implicit declaration of function 'exit' [-Wimplicit-function-declaration]
    exit(0);
    ^~~~
../src/Lab03_uart.c:28:4: warning: incompatible implicit declaration of built-in function 'exit'
../src/Lab03_uart.c:28:4: note: include '<stdlib.h>' or provide a declaration of 'exit'
Finished building: ../src/Lab03_uart.c
 
Building target: Lab03_UART_SPI.elf
Invoking: MCU GCC Linker
arm-none-eabi-gcc -mcpu=cortex-m7 -mthumb -mfloat-abi=hard -mfpu=fpv5-d16 -specs=nosys.specs -specs=nano.specs -T"/Users/lucienbrule/Developer/otherMPS/MPS/Lab03_UART_SPI/LinkerScript.ld" -Wl,-Map=output.map -Wl,--gc-sections -o "Lab03_UART_SPI.elf" @"objects.list"   -lm
Finished building target: Lab03_UART_SPI.elf
 
/Applications/Xcode.app/Contents/Developer/usr/bin/make --no-print-directory post-build
Generating binary and Printing size information:
arm-none-eabi-objcopy -O binary "Lab03_UART_SPI.elf" "Lab03_UART_SPI.bin"
arm-none-eabi-size "Lab03_UART_SPI.elf"
   text	   data	    bss	    dec	    hex	filename
   9616	    112	   1304	  11032	   2b18	Lab03_UART_SPI.elf
 
19:01:23 **** Incremental Build of configuration Debug for project Lab03_UART_SPI ****
make all 
Building file: ../src/Lab03_uart.c
Invoking: MCU GCC Compiler
/Users/lucienbrule/Developer/otherMPS/MPS/Lab03_UART_SPI/Debug
arm-none-eabi-gcc -mcpu=cortex-m7 -mthumb -mfloat-abi=hard -mfpu=fpv5-d16 -DUSE_HAL_DRIVER -DSTM32F769xx -DUSE_STM32F769I_DISCO -I"/Users/lucienbrule/Developer/otherMPS/MPS/Lab03_UART_SPI/inc" -I"/Users/lucienbrule/Developer/otherMPS/MPS/stm32lib/Drivers/CMSIS/Device/ST/STM32F7xx/Include" -I"/Users/lucienbrule/Developer/otherMPS/MPS/stm32lib/Drivers/CMSIS/Include" -I"/Users/lucienbrule/Developer/otherMPS/MPS/stm32lib/Drivers/STM32F7xx_HAL_Driver/Inc" -Og -g3 -Wall -fmessage-length=0 -Wdouble-promotion -ffunction-sections -c -MMD -MP -MF"src/Lab03_uart.d" -MT"src/Lab03_uart.o" -o "src/Lab03_uart.o" "../src/Lab03_uart.c"
../src/Lab03_uart.c: In function 'polling_receive':
../src/Lab03_uart.c:28:4: warning: implicit declaration of function 'exit' [-Wimplicit-function-declaration]
    exit();
    ^~~~
../src/Lab03_uart.c:28:4: warning: incompatible implicit declaration of built-in function 'exit'
../src/Lab03_uart.c:28:4: note: include '<stdlib.h>' or provide a declaration of 'exit'
../src/Lab03_uart.c:28:4: error: too few arguments to function 'exit'
make: *** [src/Lab03_uart.o] Error 1
19:01:55 **** Incremental Build of configuration Debug for project Lab03_UART_SPI ****
make all 
Building file: ../src/Lab03_uart.c
Invoking: MCU GCC Compiler
/Users/lucienbrule/Developer/otherMPS/MPS/Lab03_UART_SPI/Debug
arm-none-eabi-gcc -mcpu=cortex-m7 -mthumb -mfloat-abi=hard -mfpu=fpv5-d16 -DUSE_HAL_DRIVER -DSTM32F769xx -DUSE_STM32F769I_DISCO -I"/Users/lucienbrule/Developer/otherMPS/MPS/Lab03_UART_SPI/inc" -I"/Users/lucienbrule/Developer/otherMPS/MPS/stm32lib/Drivers/CMSIS/Device/ST/STM32F7xx/Include" -I"/Users/lucienbrule/Developer/otherMPS/MPS/stm32lib/Drivers/CMSIS/Include" -I"/Users/lucienbrule/Developer/otherMPS/MPS/stm32lib/Drivers/STM32F7xx_HAL_Driver/Inc" -Og -g3 -Wall -fmessage-length=0 -Wdouble-promotion -ffunction-sections -c -MMD -MP -MF"src/Lab03_uart.d" -MT"src/Lab03_uart.o" -o "src/Lab03_uart.o" "../src/Lab03_uart.c"
../src/Lab03_uart.c: In function 'polling_receive':
../src/Lab03_uart.c:29:9: error: 'EXIT_SUCESS' undeclared (first use in this function); did you mean 'EXIT_SUCCESS'?
    exit(EXIT_SUCESS);
         ^~~~~~~~~~~
         EXIT_SUCCESS
../src/Lab03_uart.c:29:9: note: each undeclared identifier is reported only once for each function it appears in
make: *** [src/Lab03_uart.o] Error 1
19:02:11 **** Incremental Build of configuration Debug for project Lab03_UART_SPI ****
make all 
Building file: ../src/Lab03_uart.c
Invoking: MCU GCC Compiler
/Users/lucienbrule/Developer/otherMPS/MPS/Lab03_UART_SPI/Debug
arm-none-eabi-gcc -mcpu=cortex-m7 -mthumb -mfloat-abi=hard -mfpu=fpv5-d16 -DUSE_HAL_DRIVER -DSTM32F769xx -DUSE_STM32F769I_DISCO -I"/Users/lucienbrule/Developer/otherMPS/MPS/Lab03_UART_SPI/inc" -I"/Users/lucienbrule/Developer/otherMPS/MPS/stm32lib/Drivers/CMSIS/Device/ST/STM32F7xx/Include" -I"/Users/lucienbrule/Developer/otherMPS/MPS/stm32lib/Drivers/CMSIS/Include" -I"/Users/lucienbrule/Developer/otherMPS/MPS/stm32lib/Drivers/STM32F7xx_HAL_Driver/Inc" -Og -g3 -Wall -fmessage-length=0 -Wdouble-promotion -ffunction-sections -c -MMD -MP -MF"src/Lab03_uart.d" -MT"src/Lab03_uart.o" -o "src/Lab03_uart.o" "../src/Lab03_uart.c"
Finished building: ../src/Lab03_uart.c
 
Building target: Lab03_UART_SPI.elf
Invoking: MCU GCC Linker
arm-none-eabi-gcc -mcpu=cortex-m7 -mthumb -mfloat-abi=hard -mfpu=fpv5-d16 -specs=nosys.specs -specs=nano.specs -T"/Users/lucienbrule/Developer/otherMPS/MPS/Lab03_UART_SPI/LinkerScript.ld" -Wl,-Map=output.map -Wl,--gc-sections -o "Lab03_UART_SPI.elf" @"objects.list"   -lm
Finished building target: Lab03_UART_SPI.elf
 
/Applications/Xcode.app/Contents/Developer/usr/bin/make --no-print-directory post-build
Generating binary and Printing size information:
arm-none-eabi-objcopy -O binary "Lab03_UART_SPI.elf" "Lab03_UART_SPI.bin"
arm-none-eabi-size "Lab03_UART_SPI.elf"
   text	   data	    bss	    dec	    hex	filename
   9616	    112	   1304	  11032	   2b18	Lab03_UART_SPI.elf
 
